idea/testData/checkerWithErrorTypes/quick/ClassObjects.jet
namespace Jet86

class A {
  class object {
    val x = 1
  }
  <!MANY_CLASS_OBJECTS!>class object { // error
    val x = 1
  }<!>
}

class B() {
  val x = 12
}

object b {
  <!CLASS_OBJECT_NOT_ALLOWED!>class object {
    val x = 1
  }<!> // error
}

val a = A.x
val c = <!NO_CLASS_OBJECT!>B<!>.x
val d = b.<!UNRESOLVED_REFERENCE!>x<!>

val s = <!UNRESOLVED_REFERENCE!>System<!>  // error
fun test() {
  <!UNRESOLVED_REFERENCE!>System<!>.out<!UNNECESSARY_SAFE_CALL!>?.<!>println()
  <!UNRESOLVED_REFERENCE!>java<!>.lang.System.out<!UNNECESSARY_SAFE_CALL!>?.<!>println()
}